# robocomp

./: .abstruse.yml  .gitignore  .gitmodules  .project  .travis.yml  404.html  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTE.md  CONTRIBUTING.md  DSR_Installscript.sh  README.md  STYLE_GUIDE.md  _config.yml  blog.md  config.icebox  config.icestorm  feed.xml  fixup_deb.sh  gsoc15-robocomp-ideas.html  index.html  installScript.sh  install_dependencies.sh  params.json  script.sh  setup.bash  startStorm.sh
classes/dsr/: CMakeLists.txt  README.md  dependencies.sh
classes/dsr/api/: CMakeLists.txt  dsr_api.cpp  dsr_api.h  dsr_camera_api.cpp  dsr_camera_api.h  dsr_eigen_defs.h  dsr_exceptions.h  dsr_inner_api.cpp  dsr_inner_api.h  dsr_inner_eigen_api.cpp  dsr_inner_eigen_api.h  (+6 more)
classes/innermodel/: CMakeLists.txt  Doxyfile.in
classes/osgviewer/: CMakeLists.txt  Doxyfile  adapterwidget.cpp  findnamednode.cpp  getworldcoorofnode.cpp  getworldcoorofnode.h  osgview.cpp  osgview.h  viewerqt.cpp
classes/qmatrix/: CMakeLists.txt  Doxyfile  line2d.cpp  qcamera.cpp  qessential.cpp  qextrinsics.cpp  qfundamental.cpp  qhomo.cpp  qmat.cpp  qmatrot.cpp  qmovingrobot.cpp  qrtmat.cpp  quaternion.cpp  qvec.cpp
components/HAL/: CMakeLists.txt
doc/IceDemoWithOpenCV/: CMakeLists.txt  Printer.cpp  Printer.h  README.md  client.cpp  server.cpp
libs/: CMakeLists.txt  test.cpp  test_dsr.cpp
libs/dsr/: CMakeLists.txt  README.md  dependencies.sh
libs/innermodel/: CMakeLists.txt  README.md  innermodel.cpp  innermodel.cpp~  innermodel.h  innermodel_python.cpp  innermodelcamera.cpp  innermodeldifferentialrobot.cpp  innermodeldisplay.cpp  innermodeldraw.cpp  innermodeldraw.h  innermodelexception.cpp  innermodelimu.cpp  innermodeljoint.cpp  innermodellaser.cpp  innermodelmesh.cpp  innermodelmgr.cpp  innermodelnode.cpp  innermodelomnirobot.cpp  innermodelplane.cpp  innermodelpointcloud.cpp  innermodelprismaticjoint.cpp  innermodelprismaticjoint.h  innermodelreader.cpp  innermodelrgbd.cpp  innermodeltouchsensor.cpp  innermodeltransform.cpp  innermodelviewer.cpp
libs/innermodel-python3/: .gitignore  CMakeLists.txt  README  setup.py
libs/innermodel2/: CMakeLists.txt  InnerModel2.xsd  innermodel.cpp
libs/osgviewer/: CMakeLists.txt  adapterwidget.cpp  getworldcoorofnode.cpp  osgview.cpp  osgviewer_python.cpp
libs/qmat/: CMakeLists.txt  CMakeLists2.txt  qcamera.cpp  qessential.cpp  qextrinsics.cpp  qfundamental.cpp  qhomo.cpp  qline2d.cpp  qline2d.h  qmat.cpp  qmat_python.cpp  qmatrot.cpp  qmovingrobot.cpp  qrtmat.cpp  quaternion.cpp  qvec.cpp
tools/: CMakeLists.txt  README.md  fetch_DSLEditor.py  fetch_IPP.py  install.py  using-yakuake  yaku.py
tools/AGM/: .gitignore  .travis.yml  CMakeLists.txt  README.md  compile.sh  instDep.sh
tools/RCInnerModelSimulator/: DoxyFile  tool_config.cmake
tools/RCSimulator/: CMakeLists.txt
tools/buildTools/: CMakeLists.txt  rbcd  rbcd.sh  rbcd.zsh  rc_init_ws.py  rcbuild.py  rccd.sh  rccd_utils.py  rccomp.py  rced.py  rcedit.py  rcfind.py  rcrun.py  rcworkspace.py  robocomp.pth  setup.sh  workspace.py
tools/cli/: CMakeLists.txt  README.md  __init__.py  cli_helpers.py  logging_helpers.py  rcbuild.py  rccd.py  rccomp.py  rcrun.py  rcworkspace.py  setup.py  workspace.py
tools/gzserver/: CMakeLists.txt  README.md
tools/install/: docker_building_test.sh  robocomp_install.sh  robocomp_prerequisites_install.sh
tools/rcdeploymentchecker/: CMakeLists.txt  README.md  rcdeploymentchecker.py
tools/rcdns/: CMakeLists.txt  README.md  rcdns.cdsl
tools/rcinnerModelEditor/: CMakeLists.txt  DoxyFile  README.md  learnBotDSL.xml  rcinnerModelEditor.cdsl  tut.md
tools/rcinnerModelSimulator/: CMakeLists.txt  tool_config.cmake
tools/rclogger/: CMakeLists.txt  DoxyFile  README.md.new  rclogger.cdsl
tools/rcmanager/: CMakeCache.txt  CMakeLists.txt  Doxyfile  README.md  controller.py  deployment.xml  editorForm.ui  formManager.ui  logger.py  main.py  manager.xml  model.py  rcmanager  rcmanager.c  rcmanager.py  rcmanagerConfig.py  rcmanagerConfignew.py  rcmanagerSignals.py  simple.xml  ui_editorForm.py  ui_formManager.py  viewer.py  xmlreader.py  yakuake_support.py
tools/rcmanagerSimple/: CMakeLists.txt  README.md  editorFormSimple.ui  formManagerSimple.ui  rcmanagerConfig.py  rcmanagerConfigSimple.py  rcmanagerEditorSimple.py  rcmanagersimple.c  rcmanagersimple.cpp  rcmanagersimple.py  ui_editorFormSimple.py  ui_formManagerSimple.py
tools/rcmaster/: CMakeLists.txt  README.md  TODO  rcmaster.cdsl
tools/rcmonitor/: CMakeLists.txt  Doxyfile  README.md  aprendizDlg.ui  armRocioDlg.ui  depthBusDlg.ui  floorDlg.ui  forkDlg.ui  formMonitor.ui  frases.txt  headntpDlg.ui  headt2pDlg.ui  jointmotorDlg.ui  kinectDlg.ui  openA.ui  period.ui  rcmonitor  rcmonitor.py  rgbdbusDlg.ui  smarTestDlg.ui  someTest.py  someTest.rcm
tools/rcnode/: CMakeLists.txt  rcnode.conf  rcnode.sh
tools/rcportchecker/: CMakeLists.txt  README.md  rcportchecker.py  setup.py
tools/rcremote/: CMakeLists.txt  README.md  rcremote.py  rcremoteserver.py  rcremoteshell.sh
tools/rcreplay/: CMakeLists.txt  Doxyfile  camera.py  cloud.py  cloud_capture.conf  cloud_replay.conf  config  config.null  differentialRobot.py  frameskip.ui  gui.ui  imu.py  jointMotor.py  kinect.conf  kinect.py  laser.conf  laser.py  null.py  rcreplay  rcreplay.py  rgbd.conf  rgbd.py  rgbdJoint.conf  roimant.py  ui_frameskip.py  ui_gui.py
tools/robocompdsl/: CMakeLists.txt  DEVELOPER.md  README.md  TEMPLATE.ICE  componentgenerator.py  filesgenerator.py  parseCDSL.py  parseIDSL.py  parseSMDSL.py  rcExceptions.py  requirements.txt  robocomp_config.json  robocomp_general.py  robocompdsl.py  robocompdsl_core.py  robocompdslutils.py  templatepython.py  visualization_test.py
tools/robocompdsl-gui/: CDSLDocument.py  CMakeLists.txt  README.md  codeeditor.py  customListWidget.py  eleComp.cdsl  gui.ui  highlighter.py  main2.py  main_p3.py  parse-gui.py  parseCDSL.py  parseGUI.py  parseIDSL.py  rcExceptions.py  robocompdslgui_user_guide.md  ui_gui.py
tools/yaku/: CMakeLists.txt  setup.py  yaku.py  yaku_lib.py  yakuake_support.py
(+4287 files in other folders)
